- Add a tgz with HF build from hyperformula/jk/remove-gpujs branch and set it as a HF source in package.json (only for testing purposes, not to be ever merged to develop)

--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "pikaday": "1.8.0"
   },
   "optionalDependencies": {
-    "hyperformula": "^1.1.0"
+    "hyperformula": "file:./hyperformula-without-gpu-js.tgz"
   },
   "devDependencies": {
     "@actions/core": "^1.2.6",
