--- a/wrappers/vue3/package.json
+++ b/wrappers/vue3/package.json
@@ -49,36 +49,36 @@
     "vue": "next"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime": "^7.4.5",
-    "@vue/compiler-sfc": "^3.2.12",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
+    "@babel/runtime": "^7.15.4",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@vue/compiler-sfc": "^3.2.13",
     "@vue/test-utils": "2.0.0-rc.14",
     "babel-core": "^7.0.0-bridge.0",
     "cpy-cli": "^3.1.1",
-    "cross-env": "^5.2.0",
-    "css-loader": "^3.0.0",
+    "cross-env": "^5.2.1",
+    "css-loader": "^3.6.0",
     "del-cli": "^3.0.1",
     "handsontable": "9.0.2",
     "jest": "^26.6.3",
-    "rollup": "^2.0.0",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-cleanup": "^3.1.1",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.0.2",
-    "rollup-plugin-replace": "^2.2.0",
+    "rollup": "^2.56.3",
+    "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.21.1",
+    "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-vue": "^6.0.0",
     "ts-jest": "^26.5.6",
-    "typescript": "3.8.2",
-    "vue": "^3.2.12",
+    "typescript": "3.9.10",
+    "vue": "^3.2.13",
     "vue-class-component": "8.0.0-rc.1",
     "vue-jest": "5.0.0-alpha.10",
     "vue-router": "4.0.11",
