--- a/wrappers/vue3/example/package.json
+++ b/wrappers/vue3/example/package.json
@@ -2,30 +2,58 @@
   "name": "example",
   "version": "0.0.1",
   "private": true,
+  "description": "",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/cli-service": "^4.5.13",
     "handsontable": "9.0.2",
     "vue": "3.2.13",
     "vuex": "4.0.2"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
+  "peerDependencies": {
+    "handsontable": "9.0.2",
+    "vue": "next"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
+    "@babel/runtime": "^7.15.4",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-service": "^4.5.13",
+    "@vue/compiler-sfc": "^3.2.13",
+    "@vue/test-utils": "2.0.0-rc.14",
+    "babel-core": "^7.0.0-bridge.0",
+    "cpy-cli": "^3.1.1",
+    "cross-env": "^5.2.1",
+    "css-loader": "^3.6.0",
+    "del-cli": "^3.0.1",
+    "handsontable": "9.0.2",
+    "jest": "^26.6.3",
+    "rollup": "^2.56.3",
+    "rollup-plugin-cleanup": "^3.2.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-vue": "^6.0.0",
+    "ts-jest": "^26.5.6",
+    "typescript": "3.9.10",
+    "vue": "^3.2.13",
+    "vue-class-component": "8.0.0-rc.1",
+    "vue-jest": "5.0.0-alpha.10",
+    "vue-router": "4.0.11",
+    "vuex": "4.0.2"
   },
   "postcss": {
     "plugins": {
@@ -37,6 +65,5 @@
     "last 2 versions",
     "not ie <= 8"
   ],
-  "keywords": [],
-  "description": ""
+  "keywords": []
 }
