--- a/.github/workflows/ghcr-cleanup.yml
+++ b/.github/workflows/ghcr-cleanup.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - feature/issue-9123
+      - feature/issue-9123-test
 
 jobs:
   clean-ghcr:
@@ -13,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Delete documentation images older than a month
-        uses: snok/container-retention-policy@754c94da17832ea399f34da9f3efa7194055010b
+        uses: snok/container-retention-policy@1c634b2fbfbadeda00368373761cccf6496f628a
         with:
           image-names: handsontable/handsontable-documentation
           cut-off: One month ago UTC
